[gd_scene load_steps=8 format=3 uid="uid://crgaaed1mocc3"]

[ext_resource type="Script" uid="uid://um4xecsn5ag1" path="res://scripts/ui/main_menu_standalone.gd" id="1_main_menu_script"]
[ext_resource type="Theme" uid="uid://bqx8yqn7ehynj" path="res://resources/ui_theme.tres" id="2_theme"]
[ext_resource type="FontFile" uid="uid://bek7fih7dv3co" path="res://fonts/button_font.ttf" id="3_1g8jr"]

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font = ExtResource("3_1g8jr")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_ec1gl"]
font_sizes/font_size = 24
font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kvtbc"]
font_sizes/font_size = 24
font_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_main_menu_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0"
label_settings = SubResource("LabelSettings_2")
horizontal_alignment = 2
vertical_alignment = 2

[node name="TabPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -100.0
offset_right = 350.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="TabPanel"]
layout_mode = 2
text = "Play"
alignment = 0

[node name="OptionsButton" type="Button" parent="TabPanel"]
layout_mode = 2
text = "Options"
alignment = 0

[node name="ExitButton" type="Button" parent="TabPanel"]
layout_mode = 2
text = "Exit"
alignment = 0

[node name="PlayChoiceMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="PlayChoiceMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="MenuContainer" type="VBoxContainer" parent="PlayChoiceMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayLabel" type="Label" parent="PlayChoiceMenu/MenuContainer"]
layout_mode = 2
text = "Play"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="PlayChoiceMenu/MenuContainer"]
layout_mode = 2
alignment = 1

[node name="SinglePlayerButton" type="Button" parent="PlayChoiceMenu/MenuContainer/ButtonContainer"]
layout_mode = 2
text = "Single Player"

[node name="MultiplayerButton" type="Button" parent="PlayChoiceMenu/MenuContainer/ButtonContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="BackButton" type="Button" parent="PlayChoiceMenu"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
text = "Back"

[node name="SinglePlayerMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="SinglePlayerMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="MenuContainer" type="VBoxContainer" parent="SinglePlayerMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="SinglePlayerLabel" type="Label" parent="SinglePlayerMenu/MenuContainer"]
layout_mode = 2
text = "Single Player"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="SinglePlayerMenu/MenuContainer"]
layout_mode = 2

[node name="QuickPlayButton" type="Button" parent="SinglePlayerMenu/MenuContainer/ButtonContainer"]
layout_mode = 2
text = "Quick Play"

[node name="CustomGameButton" type="Button" parent="SinglePlayerMenu/MenuContainer/ButtonContainer"]
layout_mode = 2
text = "Custom Game"

[node name="BackButton" type="Button" parent="SinglePlayerMenu"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
text = "Back"

[node name="LobbyMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="LobbyMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="BackButton" type="Button" parent="LobbyMenu"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
text = "Back to Main Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="LobbyMenu/VBoxContainer"]
layout_mode = 2
text = "Multiplayer Lobby"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_1")

[node name="ServerAddressLabel" type="Label" parent="LobbyMenu/VBoxContainer"]
layout_mode = 2
text = "Server Address:"
label_settings = SubResource("LabelSettings_ec1gl")

[node name="ServerAddressInput" type="LineEdit" parent="LobbyMenu/VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Enter server address"

[node name="HostButton" type="Button" parent="LobbyMenu/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="LobbyMenu/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="StatusLabel" type="Label" parent="LobbyMenu/VBoxContainer"]
layout_mode = 2
text = "Ready to host or join"
label_settings = SubResource("LabelSettings_kvtbc")

[node name="UniversalOptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UniversalOptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="BackButton" type="Button" parent="UniversalOptionsMenu"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
text = "Back"

[node name="OptionsContainer" type="VBoxContainer" parent="UniversalOptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabButtons" type="HBoxContainer" parent="UniversalOptionsMenu/OptionsContainer"]
layout_mode = 2

[node name="AudioTabButton" type="Button" parent="UniversalOptionsMenu/OptionsContainer/TabButtons"]
layout_mode = 2
text = "Audio"

[node name="VideoTabButton" type="Button" parent="UniversalOptionsMenu/OptionsContainer/TabButtons"]
layout_mode = 2
text = "Video"

[node name="ControlsTabButton" type="Button" parent="UniversalOptionsMenu/OptionsContainer/TabButtons"]
layout_mode = 2
text = "Controls"

[node name="ContentArea" type="VBoxContainer" parent="UniversalOptionsMenu/OptionsContainer"]
layout_mode = 2

[node name="AudioContent" type="VBoxContainer" parent="UniversalOptionsMenu/OptionsContainer/ContentArea"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
value = 50.0

[node name="MusicVolumeLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
value = 50.0

[node name="SFXVolumeLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
value = 50.0

[node name="VoiceVolumeLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
text = "Voice Volume"

[node name="VoiceVolumeSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/AudioContent"]
layout_mode = 2
value = 50.0

[node name="VideoContent" type="VBoxContainer" parent="UniversalOptionsMenu/OptionsContainer/ContentArea"]
visible = false
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionDropdown" type="OptionButton" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2
text = "VSync"

[node name="VSyncCheckbox" type="CheckBox" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/VideoContent"]
layout_mode = 2

[node name="ControlsContent" type="VBoxContainer" parent="UniversalOptionsMenu/OptionsContainer/ContentArea"]
visible = false
layout_mode = 2

[node name="MouseSensitivityLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
text = "Mouse Sensitivity"

[node name="MouseSensitivitySlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
value = 50.0

[node name="FOVLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
text = "Field of View"

[node name="FOVSlider" type="HSlider" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
value = 50.0

[node name="CrosshairLabel" type="Label" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2
text = "Crosshair Style"

[node name="CrosshairDropdown" type="OptionButton" parent="UniversalOptionsMenu/OptionsContainer/ContentArea/ControlsContent"]
layout_mode = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0
theme = ExtResource("2_theme")
visible = false
